--- a/heiry/index.html
+++ b/heiry/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>헤이리마을</title>
 <script src="http://code.jquery.com/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <style>
     *{list-style: none; margin: 0; padding:0;}
 </style>
