--- a/heiry/index.html
+++ b/heiry/index.html
@@ -18,7 +18,68 @@
 
 </head>
 <body>
+<div id="section01">
+    <div class="menu_box">
+        <div class="menu-box-logo">
+            <div class="logo"><a href="#section01"><img src="img/logo.png" alt="logo"></a></div>
+        </div>
+        <div class="menu-box-button">
+            <ul class="sec01-button">
+                <li><a href="#section01" class="function-button1">Main</a></li>
+                <li><a href="#section02" class="function-button2">Intro</a></li>
+                <li><a href="#section03" class="function-button3">In</a></li>
+                <li><a href="#section04" class="function-button4">Out</a></li>
+                <li><a href="#section05" class="function-button5">Map</a></li>
+            </ul>
+        </div>
+    </div>
 
+    <!-- navi end -->
+    <div class="main-title">
+        <h1 class="main-txt">Heiry <br>
+            Art Villey </h1>
+    </div>
+</div>
+
+<script>
+    $(function(){
+        $(".function-button1").click(function(){
+            $(".function-button1").css("font-size","23px").css("text-decoration","underline");
+            $(".function-button2").css("font-size","16px").css("text-decoration","none");
+            $(".function-button3").css("font-size","16px").css("text-decoration","none");
+            $(".function-button4").css("font-size","16px").css("text-decoration","none");
+            $(".function-button5").css("font-size","16px").css("text-decoration","none");
+        });
+        $(".function-button2").click(function(){
+            $(".function-button2").css("font-size","23px").css("text-decoration","underline");
+            $(".function-button1").css("font-size","16px").css("text-decoration","none");
+            $(".function-button3").css("font-size","16px").css("text-decoration","none");
+            $(".function-button4").css("font-size","16px").css("text-decoration","none");
+            $(".function-button5").css("font-size","16px").css("text-decoration","none");
+        });
+        $(".function-button3").click(function(){
+            $(".function-button3").css("font-size","23px").css("text-decoration","underline");
+            $(".function-button2").css("font-size","16px").css("text-decoration","none");
+            $(".function-button1").css("font-size","16px").css("text-decoration","none");
+            $(".function-button4").css("font-size","16px").css("text-decoration","none");
+            $(".function-button5").css("font-size","16px").css("text-decoration","none");
+        });
+        $(".function-button4").click(function(){
+            $(".function-button4").css("font-size","23px").css("text-decoration","underline");
+            $(".function-button2").css("font-size","16px").css("text-decoration","none");
+            $(".function-button3").css("font-size","16px").css("text-decoration","none");
+            $(".function-button1").css("font-size","16px").css("text-decoration","none");
+            $(".function-button5").css("font-size","16px").css("text-decoration","none");
+        });
+        $(".function-button5").click(function(){
+            $(".function-button5").css("font-size","23px").css("text-decoration","underline");
+            $(".function-button2").css("font-size","16px").css("text-decoration","none");
+            $(".function-button3").css("font-size","16px").css("text-decoration","none");
+            $(".function-button4").css("font-size","16px").css("text-decoration","none");
+            $(".function-button1").css("font-size","16px").css("text-decoration","none");
+        });
+    });
+</script>
 <!-- section01 -->
 <div id="section02">
     <div class="sec02-warp">
