--- a/heiry/index.html
+++ b/heiry/index.html
@@ -65,6 +65,7 @@
 
 <!-- section02 -->
 <div id="section03">
+    <img src="img/bg-cha.jpg" alt="">
         <div class="section03-warp">
             <div class="section03-txt">
                 <h1>석보리 박물관</h1> <br>
