--- a/heiry/index.html
+++ b/heiry/index.html
@@ -41,6 +41,45 @@
     </div>
 </div>
 
+<script>
+    $(function(){
+        $(".function-button1").click(function(){
+            $(".function-button1").css("font-size","23px").css("text-decoration","underline");
+            $(".function-button2").css("font-size","16px").css("text-decoration","none");
+            $(".function-button3").css("font-size","16px").css("text-decoration","none");
+            $(".function-button4").css("font-size","16px").css("text-decoration","none");
+            $(".function-button5").css("font-size","16px").css("text-decoration","none");
+        });
+        $(".function-button2").click(function(){
+            $(".function-button2").css("font-size","23px").css("text-decoration","underline");
+            $(".function-button1").css("font-size","16px").css("text-decoration","none");
+            $(".function-button3").css("font-size","16px").css("text-decoration","none");
+            $(".function-button4").css("font-size","16px").css("text-decoration","none");
+            $(".function-button5").css("font-size","16px").css("text-decoration","none");
+        });
+        $(".function-button3").click(function(){
+            $(".function-button3").css("font-size","23px").css("text-decoration","underline");
+            $(".function-button2").css("font-size","16px").css("text-decoration","none");
+            $(".function-button1").css("font-size","16px").css("text-decoration","none");
+            $(".function-button4").css("font-size","16px").css("text-decoration","none");
+            $(".function-button5").css("font-size","16px").css("text-decoration","none");
+        });
+        $(".function-button4").click(function(){
+            $(".function-button4").css("font-size","23px").css("text-decoration","underline");
+            $(".function-button2").css("font-size","16px").css("text-decoration","none");
+            $(".function-button3").css("font-size","16px").css("text-decoration","none");
+            $(".function-button1").css("font-size","16px").css("text-decoration","none");
+            $(".function-button5").css("font-size","16px").css("text-decoration","none");
+        });
+        $(".function-button5").click(function(){
+            $(".function-button5").css("font-size","23px").css("text-decoration","underline");
+            $(".function-button2").css("font-size","16px").css("text-decoration","none");
+            $(".function-button3").css("font-size","16px").css("text-decoration","none");
+            $(".function-button4").css("font-size","16px").css("text-decoration","none");
+            $(".function-button1").css("font-size","16px").css("text-decoration","none");
+        });
+    });
+</script>
 
 <!-- section01 -->
 <div id="section02">
