--- a/heiry/index.html
+++ b/heiry/index.html
@@ -104,7 +104,7 @@
 
 <!-- section02 -->
 <div id="section03">
-    <img src="img/bg-cha.jpg" alt="">
+    <img src="img/bg-cha.jpg" alt="" width="100%">
         <div class="section03-warp">
             <div class="section03-txt">
                 <h1>석보리 박물관</h1> <br>
