--- a/heiry/index.html
+++ b/heiry/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>헤이리마을</title>
 <script src="http://code.jquery.com/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 
 <style>
     *{list-style: none; margin: 0; padding:0;}
@@ -23,7 +24,7 @@
         <div class="menu-box-logo">
             <div class="logo"><a href="#section01"><img src="img/logo.png" alt="logo"></a></div>
         </div>
-        <div class="menu-box-button">
+        <nav class="menu-box-button">
             <ul class="sec01-button">
                 <li><a href="#section01" class="function-button1">Main</a></li>
                 <li><a href="#section02" class="function-button2">Intro</a></li>
@@ -31,15 +32,17 @@
                 <li><a href="#section04" class="function-button4">Out</a></li>
                 <li><a href="#section05" class="function-button5">Map</a></li>
             </ul>
-        </div>
+            <button type="button" class="function-button6"><i><img src="img/btn.png" alt=""></i></button>
+        </nav>
     </div>
 
-    <!-- navi end -->
-    <div class="main-title">
-        <h1 class="main-txt">Heiry <br>
-            Art Villey </h1>
-    </div>
-</div>
+    <script>
+        jQuery(document).ready(function(){
+            jQuery(".function-button6").click(function(){
+                jQuery(".sec01-button").slideToggle();
+            });
+        });
+    </script>
 
 <script>
     $(function(){
@@ -81,6 +84,13 @@
     });
 </script>
 
+    <!-- navi end -->
+    <div class="main-title">
+        <h1 class="main-txt">Heiry <br>
+            Art Villey </h1>
+    </div>
+</div>
+
 <!-- section01 -->
 <div id="section02">
     <div class="sec02-warp">
@@ -104,7 +114,6 @@
 
 <!-- section02 -->
 <div id="section03">
-    <img src="img/bg-cha.jpg" alt="" width="100%">
         <div class="section03-warp">
             <div class="section03-txt">
                 <h1>석보리 박물관</h1> <br>
