--- a/heiry/index.html
+++ b/heiry/index.html
@@ -167,8 +167,7 @@
     <div class="section05-warp">
         <div class="section05-map">
             <h1>오시는길</h1>
-            <div class="section05-map-img">
-                <img src="img/map.jpg" alt="map">
+            <div id="map" style="width:95%;height:600px;">
             </div>
             <p>주소 : 경기도 파주시 탄현민 헤이리마을길 82-105</p>
         </div>
@@ -194,6 +193,53 @@
         </div>
     </div>
 </div>
+
+<script type="text/javascript" src="http://dapi.kakao.com/v2/maps/sdk.js?appkey=a032f937baa05d964ee74e4108eae271"></script>
+    <script type="text/javascript">
+    var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+  mapOption = { 
+        center: new kakao.maps.LatLng(37.789053, 126.698711), // 지도의 중심좌표
+        level: 4 // 지도의 확대 레벨
+    };
+
+var map = new kakao.maps.Map(mapContainer, mapOption);
+
+var imageSrc = './img/map-logo2.png', // 마커이미지의 주소입니다    
+    imageSize = new kakao.maps.Size(37.1, 63.7), // 마커이미지의 크기입니다
+    imageOption = {offset: new kakao.maps.Point(27, 69)}; // 마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
+
+// 마커의 이미지정보를 가지고 있는 마커이미지를 생성합니다
+var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize, imageOption),
+    markerPosition = new kakao.maps.LatLng(37.789053, 126.698711); // 마커가 표시될 위치입니다
+
+// 마커를 생성합니다
+var marker = new kakao.maps.Marker({
+  position: markerPosition,
+  image: markerImage // 마커이미지 설정 
+});
+
+// 마커가 지도 위에 표시되도록 설정합니다
+marker.setMap(map);  
+
+// 커스텀 오버레이에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+var content = '<div class="customoverlay">' +
+    '  <a href="#" target="_blank">' +
+    '    <span class="title">헤이리 예술마을</span>' +
+    '  </a>' +
+    '</div>';
+
+// 커스텀 오버레이가 표시될 위치입니다 
+var position = new kakao.maps.LatLng(37.789053, 126.698711);  
+
+// 커스텀 오버레이를 생성합니다
+var customOverlay = new kakao.maps.CustomOverlay({
+    map: map,
+    position: position,
+    content: content,
+    yAnchor: 1 
+});
+    </script>
+
 <!-- section05 -->
 
 <script>
