--- a/heiry/index.html
+++ b/heiry/index.html
@@ -167,9 +167,12 @@
   </div>
 </div>
 
-<script>
+  <!-- Initialize Swiper -->
+  <script>
     var swiper = new Swiper('.swiper-container', {
+      slidesPerView: 1,
       spaceBetween: 30,
+      loop: true,
       pagination: {
         el: '.swiper-pagination',
         clickable: true,
