--- a/heiry/index.html
+++ b/heiry/index.html
@@ -224,6 +224,10 @@
 
 <!-- section03 -->
 <div id="section04">
+    <div class="sec04-main wow slideInRight" data-wow-duration="2s">
+        <h1>헤이리예술마을 <br>
+            주위 볼거리</h1>
+    </div>
     <div class="sec04-width">
         <div class="section04-btn">
             <button type="button" class="pro">프로방스</button>
