--- a/heiry/index.html
+++ b/heiry/index.html
@@ -230,35 +230,31 @@
     </div>
     <div class="sec04-content">
         <div class="sec04-pro">
-            <div class="pro-back">
-                <div class="sec04-txt">
-                    <div class="sec04-txt-t">
-                        <h1>프로방스</h1>
-                        <p class="bar"></p>
-                    </div>
-                    <h3>주소 : 경기도 파주시 탄현면 새오리로 69</h3>
-                    <p>남프랑스의 정취가 가득한 예쁜 마을과 아기자기한 골목들, <br>
-                        꿈길 같은 꽃밭과 정원, 갓 구운 고소한 냄새, 자연을 닮은 갖가지 <br>
-                        허브의 향기들, 동화 속 한 장면에 들어온 듯한 포토존과 문과 체험 <br>
-                        공간들 그리고, 오래 사람받아온 맛집들 까지 프로방스마을에는 <br>
-                        언제나 풍요로움이 가득합니다.</p>
+            <div class="sec04-txt">
+                <div class="sec04-bar">
+                    <h1>프로방스</h1>
+                    <p class="bar-pro"></p>
                 </div>
+                <h3>주소 : 경기도 파주시 탄현면 새오리로 69</h3> <br>
+                <p>남프랑스의 정취가 가득한 예쁜 마을과 아기자기한 골목들, <br>
+                꿈길 같은 꽃밭과 정원, 갓 구운 고소한 냄새, 자연을 닮은 갖가지 <br>
+                허브의 향기들, 동화 속 한 장면에 들어온 듯한 포토존과 문과 체험 <br>
+                공간들 그리고, 오래 사람받아온 맛집들 까지 프로방스마을에는 <br>
+                언제나 풍요로움이 가득합니다.</p>
             </div>
         </div>
         <div class="sec04-bake">
-            <div class="bake-back">
-                <div class="sec04-txt">
-                    <div class="sec04-txt-t ru">
-                        <h1>류재은 베이커리</h1>
-                        <p class="bar"></p>
-                    </div>
-                    <h3>주소: 경기도 파주시 탄현면 요풍길 265</h3>
-                    <p>향긋하고 고소한 마늘빵, <br> 
-                        매장에서 직접 정성껏 쑤운 팥으로 만드는 단팥빵, <br> 
-                        와인으로 숭성한 과일로 만드는 파네토네 등 <br>
-                        류재은베이커리에서만이 선보일 수 있는 진심이 담긴 빵과 디저트들이 <br> 
-                        여러분의아주 특별한 날을 더욱 특별하게 만들어 드립니다.</p>
+            <div class="sec04-txt">
+                <div class="sec04-bar">
+                    <h1>류재은 베이커리</h1>
+                    <p class="bar-bake"></p>
                 </div>
+                <h3>주소: 경기도 파주시 탄현면 요풍길 265</h3> <br>
+                <p>향긋하고 고소한 마늘빵, <br> 
+                매장에서 직접 정성껏 쑤운 팥으로 만드는 단팥빵, <br> 
+                와인으로 숭성한 과일로 만드는 파네토네 등 <br>
+                류재은베이커리에서만이 선보일 수 있는 진심이 담긴 빵과 디저트들이 <br> 
+                여러분의아주 특별한 날을 더욱 특별하게 만들어 드립니다.</p>
             </div>
         </div>
     </div>
