--- a/heiry/index.html
+++ b/heiry/index.html
@@ -175,14 +175,20 @@
             주위 볼거리</h1>
     </div>
     <div class="sec04-content">
-        <div class="sec04-pro">
-            <div class="sec04-txt">
-                <a href="javascript:openModal('modal1');" class="button modal-open">프로방스</a>
+        <div class="overflow">
+            <div class="sec04-pro">
+                <div class="sec04-txt">
+                    <a href="javascript:openModal('modal1');" class="button modal-open">Provance</a>
+                    <p class="pro-bar"></p>
+                </div>
             </div>
         </div>
-        <div class="sec04-bake">
-            <div class="sec04-txt">
-                <a href="javascript:openModal('modal2');" class="button modal-open">류재은 베이커리</a>
+        <div class="overflow">
+            <div class="sec04-bake">
+                <div class="sec04-txt">
+                    <a href="javascript:openModal('modal2');" class="button modal-open">bakery</a>
+                    <p class="bake-bar"></p>
+                </div>
             </div>
         </div>
         <div id="modal">
