--- a/heiry/index.html
+++ b/heiry/index.html
@@ -17,11 +17,7 @@
 <link rel="stylesheet" href="css/style.css">
 <!-- main css -->
 <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
-<!-- swiper -->
-<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-<link rel="stylesheet" href="../package/swiper-bundle.min.css">
-
+<!-- aos -->
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 </head>
