--- a/heiry/index.html
+++ b/heiry/index.html
@@ -17,7 +17,11 @@
 <link rel="stylesheet" href="css/style.css">
 <!-- main css -->
 <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
-<!-- aos -->
+<!-- swiper -->
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<link rel="stylesheet" href="../package/swiper-bundle.min.css">
+
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 </head>
@@ -224,15 +228,13 @@
 <!-- section04 -->
 <div id="section05">
     <div class="sec05-black">
-        <div class="section05-warp">
-            <div class="section05-map">
-                <h1>헤이리예술마을 <br>오시는길</h1>
-                <div id="map" style="width:95%;height:600px;">
+        <div class="section05-main" data-aos="fade-up" data-aos-duration="2000">
+            <h1>헤이리예술마을 <br>오시는길</h1>
+            <div class="section05-warp">
+                <div class="section05-map">
+                    <div id="map" style="width:95%;height:600px;"></div>
                 </div>
-            </div>
-            <div class="section05-tra">
-                <p></p>
-                <div class="sec05-txt">
+                <div class="section05-tra">
                     <h2>교통정보</h2> <br>
                     <p>
                     2200번 버스 <br>
