--- a/heiry/index.html
+++ b/heiry/index.html
@@ -22,7 +22,6 @@
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <link rel="stylesheet" href="../package/swiper-bundle.min.css">
 
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 </head>
 <body>
@@ -57,10 +56,10 @@
 <div id="section02">
     <div class="sec02-warp">
         <div class="section02-warp">
-            <div class="sec02-img" data-aos="fade-right" data-aos-duration="1000">
+            <div class="sec02-img wow slideInLeft">
                 <img src="img/intro-img.jpg" alt="">
             </div>
-            <div class="sec02-txt" data-aos="fade-left" data-aos-duration="1500">
+            <div class="sec02-txt wow slideInRight" data-wow-duration="2s">
                 <h2>예술인들이 꿈꾸는 <br>
                 지상에서 가장 아름다운 마을</h2>
                 <p>1998년 창립총회를 시작으로 헤이리는 15만평에 미술인, 음악가, <br>
@@ -74,11 +73,10 @@
     </div>
 </div>
 <script src="js/wow.min.js"></script>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 <!-- section02 -->
 <div id="section03">
-    <div class="sec03-main" data-aos="fade-right" data-aos-duration="2000">
+    <div class="sec03-main wow slideInLeft" data-wow-duration="2s">
         <h1>헤이리예술마을 <br>
             주요 볼거리</h1>
     </div>
@@ -174,7 +172,7 @@
 
 <!-- section03 -->
 <div id="section04">
-    <div class="sec04-main" data-aos="fade-left" data-aos-duration="2000">
+    <div class="sec04-main wow slideInRight" data-wow-duration="2s">
         <h1>헤이리예술마을 <br>
             주위 볼거리</h1>
     </div>
@@ -228,7 +226,7 @@
 <!-- section04 -->
 <div id="section05">
     <div class="sec05-black">
-        <div class="section05-main" data-aos="fade-up" data-aos-duration="2000">
+        <div class="section05-main">
             <h1>헤이리예술마을 <br>오시는길</h1>
             <div class="section05-warp">
                 <div class="section05-map">
